connected to an external ActiveMQ server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 ORDER_QUEUE=order-queue
+
+BROKER_HOST=localhost
+BROKER_PORT=6161
+
+activeMq.username=admin	
+activeMq.password=admin
+activeMq.brokerUrl=tcp://${BROKER_HOST}:${BROKER_PORT}
+
+#tcp://localhost:6161
