--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,10 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	
+	implementation('com.thoughtworks.xstream:xstream:1.4.10')
+	implementation('org.springframework:spring-oxm:5.0.4.RELEASE')
+	
 }
 
 test {
